#This Cargo.toml imports the minimal dependencies needed for any module to work.
[package]
name = "modules-template"
version = "1.0.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
# Needed for various traits.
sr-primitives = { git = "https://github.com/katalchain/substrate", default-features = false, branch = "master" }
# Needed for type-safe access to storage DB.
support = { package = "frame-support", git = "https://github.com/katalchain/substrate", default-features = false, branch = "master" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "frame-system", git = "https://github.com/katalchain/substrate", default-features = false, branch = "master" }

[dev-dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/katalchain/substrate", branch = "master" }
rstd = { package = "sr-std", git = "https://github.com/katalchain/substrate", branch = "master" }
runtime-io = { package = "sr-io", git = "https://github.com/katalchain/substrate", branch = "master" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sr-primitives/std",
  "support/std",
  "system/std",
]
