[package]
name = "katal-runtime"
version = "0.3.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]

  [dependencies.serde]
  version = "1.0"
  optional = true
  features = ["derive"]

  [dependencies.safe-mix]
  version = "1.0"
  default-features = false

  [dependencies.parity-codec]
  version = "3.5"
  default-features = false
  features = ["derive"]

  [dependencies.rstd]
  package = "sr-std"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.runtime-io]
  package = "sr-io"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.version]
  package = "sr-version"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.support]
  package = "srml-support"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.primitives]
  package = "substrate-primitives"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.balances]
  package = "srml-balances"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.consensus]
  package = "srml-consensus"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.aura]
  package = "srml-aura"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.executive]
  package = "srml-executive"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.indices]
  package = "srml-indices"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.system]
  package = "srml-system"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.timestamp]
  package = "srml-timestamp"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.sudo]
  package = "srml-sudo"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.runtime-primitives]
  package = "sr-primitives"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.client]
  package = "substrate-client"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.consensus-aura]
  package = "substrate-consensus-aura-primitives"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default_features = false

  [dependencies.offchain-primitives]
  package = "substrate-offchain-primitives"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default-features = false

  [dependencies.consensus_authorities]
  package = "substrate-consensus-authorities"
  git = "https://github.com/paritytech/substrate"
  branch = "v1.0"
  default-features = false

  [dependencies.contracts]
  package = "modules-contracts"
  path = "../../modules/contracts"
  default-features = false

  [dependencies.oracle]
  package = "modules-oracle"
  path = "../../modules/oracle"
  default-features = false

[features]
default = ["std"]
std = [
  "parity-codec/std",
  "primitives/std",
  "client/std",
  "rstd/std",
  "runtime-io/std",
  "support/std",
  "balances/std",
  "executive/std",
  "aura/std",
  "indices/std",
  "primitives/std",
  "system/std",
  "timestamp/std",
  "sudo/std",
  "version/std",
  "serde",
  "safe-mix/std",
  "consensus-aura/std",
  "offchain-primitives/std",
  "contracts/std",
  "oracle/std"
]
