[package]
name = "katal-runtime-wasm"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
katal-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"katal-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
