[package]
name = "srml-balances"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", optional = true }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
]
