[package]
name = "srml-example"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
balances = { package = "srml-balances", path = "../balances", default-features = false }

[dev-dependencies]
sr-io = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"sr-primitives/std",
	"srml-support/std",
	"system/std",
	"balances/std",
]
