[package]
name = "srml-executive"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }

[dev-dependencies]
hex-literal = "0.2.0"
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
srml-indices = { path = "../indices" }
balances = { package = "srml-balances", path = "../balances" }

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde",
	"parity-codec/std",
	"primitives/std",
	"runtime_io/std",
	"system/std",
]
