[package]
name = "srml-metadata"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"rstd/std",
	"primitives/std",
	"serde",
]
