[package]
name = "srml-staking"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", optional = true }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
srml-support = { path = "../support", default-features = false }
consensus = { package = "srml-consensus", path = "../consensus", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
session = { package = "srml-session", path = "../session", default-features = false }

[dev-dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
balances = { package = "srml-balances", path = "../balances" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"runtime_io/std",
	"srml-support/std",
	"primitives/std",
	"session/std",
	"system/std",
]
