[package]
name = "srml-sudo"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
sr-std = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
srml-support = { path = "../support", default-features = false }
srml-support-procedural = { path = "../support/procedural" }
system = { package = "srml-system", path = "../system", default-features = false }

[dev-dependencies]
sr-io = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"sr-std/std",
	"sr-io/std",
	"sr-primitives/std",
	"srml-support/std",
	"system/std",
]
