[package]
name = "srml-support"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-codec", version = "3.5.1", default-features = false, features = ["derive"] }
srml-metadata = { path = "../metadata", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
srml-support-procedural = { path = "./procedural" }
paste = "0.1"
once_cell = { version = "0.1.6", default-features = false, optional = true }
bitmask = { version = "0.5", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"
srml-system = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }

[features]
default = ["std"]
std = [
	"once_cell",
	"bitmask/std",
	"serde",
	"runtime_io/std",
	"codec/std",
	"sr-std/std",
	"sr-primitives/std",
	"srml-metadata/std",
	"inherents/std",
]
nightly = []
strict = []
