[package]
name = "srml-system"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.5", default-features = false, features = ["derive"] }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
srml-support = { path = "../support", default-features = false }

[dev-dependencies]
criterion = "0.2"

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"parity-codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"runtime_io/std",
	"srml-support/std",
	"primitives/std",
]

[[bench]]
name = "bench"
harness = false
